# work_buffer

./: .gitignore  LICENSE  README.md  alembic.ini  alternative_services.md  data\power_plant_config.json  electricity_maps.py  energy_response_models.py  historical_data_loader.py  interface.py  main.py  multi_processing.py  server_script.py  system_calls.py  work.py
co2_signal_test/: README.md  interface.py
co2_signal_test/configurator/: .gitignore  .gitlab-ci.yml  LICENSE  README.md  doxy.conf  pyproject.toml  setup.cfg
co2_signal_test/configurator/resources/: test-conf.json
co2_signal_test/configurator/src/configurator/: __init__.py  config.py  configurator.py  default_parameters.py  periodical_job.py  referee.py  singleton.py  source.py
co2_signal_test/configurator/tests/: configurator_test.py  singleton_test.py  source_test.py
co2_signal_test/migrations/versions/: 10806a54a5b7_dropping_co2_emission_rate_column_from_.py  52bb1e68f61b_merge_2_heads.py  (+2 more)
data/: general_config.json  historical_data_loader_config.json
migrations/: env.py
migrations/versions/: 04085d3168cf_remove_columns_of_power_breakdown.py  18959e73ae1e_change_emission_amount_to_nullable.py  21b3cf6726c7_changed_3_columns_type_and_renamed_2_.py  2b1f2a07c3cf_remove_4_more_unnecessary_columns.py  484a048707d5_rename_one_column_of_power_table.py  62d843d84712_remove_estimation_method_column_from_.py  784698b2b81d_two_tables_deletion.py  a6b87ba4031c_drop_power_plant_name_and_rename_.py  ebbfac8aea5a_create_first_api_model.py
multi_test/: test_v.py
multi_testt/: main.py
