[tool.poetry]
name = "configurator"
version = "0.1.2"
description = "save/load configurations for the projects"
authors = ["Your Name <you@example.com>"]

[tool.poetry.dev-dependencies]
pytest = "^3.0"
python = "^3.10"
jsonschema = "^4.5.1"

[tool.pytest.ini_options]
pythonpath = [
  "src"
]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
